# ito_os_public

./: .gitignore  Cargo.toml  LICENSE  README.md  linker.ld  rust-toolchain.toml  x86_64-ito_os.json
.cargo/: config.toml
src/: kernel.rs  main.rs  quantum.rs  vga.rs
