[package]
name = "ito-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.34"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]

[[bin]]
name = "ito-os"
path = "src/main.rs"
test = false